<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Turtle Geometry</string>
  <string name="label_run">Run</string>
  <string name="label_stop">Stop</string>
  <string name="label_clear">Clear</string>
  <string name="label_save">Save</string>
  <string name="label_load">Load</string>
  <string name="duration_label">Drawing duration</string>
  <string name="duration_units_label">ms</string>
  <string name="default_duration">1000</string>
  <string name="error_output_default_text">Errors and other output appear here</string>
  <string name="menu_center_yourself_title">Center yourself</string>
  <string name="menu_zoom_in_title">Zoom in</string>
  <string name="menu_zoom_out_title">Zoom out</string>
  <string name="menu_refresh_title">Refresh</string>
  <string name="menu_about_title">About</string>
  <string name="menu_exit_title">Exit</string>

  <string name="graphics_tab_label">Graphics</string>
  <string name="errors_tab_label">Errors/Output</string>
  <string name="source_tab_label">Source</string>

  <string name="author">Sergey Vinokurov</string>
  <string name="about">This is the free software application designed for working through amazing <a href="http://mitpress.mit.edu/books/turtle-geometry">Turtle Geometry book</a>. Main resource on this application is located on <a href="https://github.com/sergv/turtle-geometry">github</a>\n
  \n
  The icon and name are provided courtesy of The MIT Press, based on the MIT Press book Turtle Geometry:  The Computer as a Medium for Exploring Mathematics, by Harold Abelson and Andrea diSessa.
  </string>

</resources>
