<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/program_editor_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:keepScreenOn="true"
            android:gravity="top">

  <LinearLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:keepScreenOn="true"
                android:gravity="top">

    <EditText android:id="@+id/program_input"
              android:clickable="true"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text=""
              android:hint="Enter your turtle program here"
              android:padding="@dimen/padding"
              android:textSize="@dimen/font_size"
              android:typeface="monospace"
              android:maxLines="@integer/program_input_max_lines"
              android:lines="@integer/program_input_max_lines"
              android:scrollHorizontally="true"
              />
    <!-- android:maxWidth="@dimen/program_input_max_width" -->


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:gravity="top">

      <LinearLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="left">

        <Button android:id="@+id/button_run"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:text="@string/label_run"
                android:padding="@dimen/button_padding"
                />

        <Button android:id="@+id/button_stop"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:text="@string/label_stop"
                android:padding="@dimen/button_padding"
                />

        <Button android:id="@+id/button_clear"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:text="@string/label_clear"
                android:padding="@dimen/button_padding"
                />

      </LinearLayout>

      <LinearLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="left">

        <Button android:id="@+id/button_save"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:text="@string/label_save"
                android:padding="@dimen/button_padding"
                />

        <Button android:id="@+id/button_load"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:text="@string/label_load"
                android:padding="@dimen/button_padding"
                />

        <Button android:id="@+id/button_reindent"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:text="@string/label_reindent"
                android:padding="@dimen/button_padding"
                />
      </LinearLayout>

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="left">

      <TextView android:text="@string/duration_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding"
                android:textSize="@dimen/font_size"
                android:typeface="monospace"
                />

      <EditText android:id="@+id/duration_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding"
                android:text="@string/default_duration"
                android:textSize="@dimen/font_size"
                android:typeface="monospace"
                android:numeric="integer"
                />

      <TextView android:text="@string/duration_units_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding"
                android:textSize="@dimen/font_size"
                android:typeface="monospace"
                />

    </LinearLayout>

  </LinearLayout>

</ScrollView>
